--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@vitejs/plugin-react": "^4.0.3",
         "axios": "^1.12.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "react-router-dom": "^7.9.1"
+        "react-router-dom": "^7.9.1",
+        "vite": "^4.5.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.35.0",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
-        "@vitejs/plugin-react": "^5.0.3",
         "eslint": "^9.35.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "gh-pages": "^6.3.0",
         "globals": "^16.4.0",
         "typescript": "~5.8.3",
-        "typescript-eslint": "^8.43.0",
-        "vite": "^7.1.6"
+        "typescript-eslint": "^8.43.0"
     }
 }
