--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "frontend-react",
-    "homepage": "https://basharadam.github.io/react",
+    "homepage": "https://basharadam.github.io/frontend-react",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
