--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "frontend-react",
+
+ "name": "frontend-react",
     "homepage": "https://basharadam.github.io/frontend-react",
     "scripts": {
         "dev": "vite",
@@ -8,24 +9,32 @@
         "predeploy": "npm run build",
         "deploy": "gh-pages -d dist"
     },
-    "dependencies": {
-        "@vitejs/plugin-react": "^4.0.3",
-        "axios": "^1.12.2",
-        "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "react-router-dom": "^7.9.1",
-        "vite": "^4.5.0"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.35.0",
-        "@types/react": "^19.1.13",
-        "@types/react-dom": "^19.1.9",
-        "eslint": "^9.35.0",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.20",
-        "gh-pages": "^6.3.0",
-        "globals": "^16.4.0",
-        "typescript": "~5.8.3",
-        "typescript-eslint": "^8.43.0"
-    }
+
+     "dependencies": {
+          "@emotion/react": "^11.14.0",
+          "@emotion/styled": "^11.14.1",
+          "@mui/icons-material": "^7.3.2",
+          "@mui/material": "^7.3.2",
+          "@vitejs/plugin-react": "^4.0.3",
+          "axios": "^1.12.2",
+          "react": "^19.1.1",
+          "react-dom": "^19.1.1",
+          "react-router-dom": "^7.9.1",
+          "vite": "^4.5.0"
+     },
+     "devDependencies": {
+          "@eslint/js": "^9.35.0",
+          "@types/react": "^19.1.13",
+          "@types/react-dom": "^19.1.9",
+          "autoprefixer": "^10.4.21",
+          "eslint": "^9.35.0",
+          "eslint-plugin-react-hooks": "^5.2.0",
+          "eslint-plugin-react-refresh": "^0.4.20",
+          "gh-pages": "^6.3.0",
+          "globals": "^16.4.0",
+          "postcss": "^8.5.6",
+          "tailwindcss": "^4.1.13",
+          "typescript": "~5.8.3",
+          "typescript-eslint": "^8.43.0"
+     }
 }
